# ra6m5_hal

./: Cargo.toml  defmt.x  memory.x
.cargo/: config.toml
examples/: blinky.rs  defmt.rs  usb.rs  usb_hs_step0.rs
src/: clock.rs  dbg.rs  delay.rs  fcache.rs  flad.rs  gpio.rs  icu.rs  lib.rs  mstp.rs  ofs1.rs  register_protection.rs  rtc.rs  sysc.rs  usb.rs
src/gpio/: port0.rs  port1.rs  port2.rs  port3.rs  port4.rs  port5.rs  port6.rs  port7.rs  port8.rs  port9.rs  porta.rs  portb.rs
src/icu/: iel.rs
src/sysc/: clock.rs  mstp.rs
src/usb/: bus.rs  descriptor.rs  interrupt.rs
