[package]
name = "ra6m5-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
paste = "1.0.15"
ra6m5-pac = { version = "0.2.0", features = [
    "port0", "port1", "port2", "port3", "port4", "port5", 
    "port6", "port7", "port8", "port9", "porta", "portb", 
    "pfs", "sysc", "fcache", "flad"
] }

[dev-dependencies]
panic-halt = "1.0.0"